--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^6.5.1",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
