--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.4.0",
     "cloudinary-react": "^1.8.1",
+    "coi-serviceworker": "^0.1.7",
     "formik": "^2.4.2",
     "framer-motion": "^6.5.1",
     "react-dom": "^18.2.0",
